--- a/project1.html
+++ b/project1.html
@@ -9,31 +9,63 @@
             font-family: Arial, sans-serif;
             margin: 20px;
             line-height: 1.6;
-            max-width: 700px;
+            max-width: 900px;
             margin-left: auto;
             margin-right: auto;
+            background-color: #f9f9f9;
         }
-        h1, h2 {
+        h1 {
             color: #333;
+            text-align: center;
+            margin-bottom: 20px;
+        }
+        .toolbar {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 20px;
+            background-color: #4CAF50;
+            padding: 10px;
+            border-radius: 8px;
+            color: white;
+        }
+        .toolbar a {
+            color: white;
+            text-decoration: none;
+            font-size: 16px;
+        }
+        .toolbar a:hover {
+            text-decoration: underline;
         }
         iframe {
+            display: block;
             width: 100%;
-            height: 600px;
-            border: none;
-            margin-top: 20px;
+            height: 800px;
+            border: 1px solid #ccc;
+            border-radius: 8px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            background-color: white;
         }
-        a {
-            color: blue;
-            text-decoration: none;
-        }
-        a:hover {
-            text-decoration: underline;
+        .loading {
+            text-align: center;
+            font-size: 18px;
+            margin: 20px;
+            color: #888;
         }
     </style>
 </head>
 <body>
     <h1>Project 1: Evaluating and Improving Proxy Selection Frameworks</h1>
-    <p><a href="index.html">&larr; Back to Home</a></p>
-    <iframe src="PDFs/Evaluating_and_Improving_Proxy_Selection_Frameworks_for_Welfare_Schemes.pdf"></iframe>
+    <div class="toolbar">
+        <a href="index.html">&larr; Back to Home</a>
+        <a href="pdfs/Evaluating_and_Improving_Proxy_Selection_Frameworks_for_Welfare_Schemes.pdf" target="_blank">
+            Download PDF
+        </a>
+    </div>
+    <div class="loading" id="loadingMessage">Loading PDF...</div>
+    <iframe 
+        src="PDFs/Evaluating_and_Improving_Proxy_Selection_Frameworks_for_Welfare_Schemes.pdf" 
+        onload="document.getElementById('loadingMessage').style.display='none';">
+    </iframe>
 </body>
 </html>
