--- a/project1.html
+++ b/project1.html
@@ -20,23 +20,25 @@
             margin-bottom: 20px;
         }
         .toolbar {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-bottom: 20px;
-            background-color: #4CAF50;
-            padding: 10px;
-            border-radius: 8px;
-            color: white;
-        }
-        .toolbar a {
-            color: white;
-            text-decoration: none;
-            font-size: 16px;
-        }
-        .toolbar a:hover {
-            text-decoration: underline;
-        }
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+    background-color: #D3D3D3; /* Grey background */
+    padding: 10px;
+    border-radius: 8px;
+    color: black; /* Black text color */
+}
+
+.toolbar a {
+    color: black; /* Black link color */
+    text-decoration: none;
+    font-size: 16px;
+}
+
+.toolbar a:hover {
+    text-decoration: underline;
+}
         iframe {
             display: block;
             width: 100%;
