--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 </head>
 <body>
     <h1>Siddharth Shrimal</h1>
-    <p>Welcome to my personal website. I’m a third-year economics undergraduate studying at Ashoka University. My main motivation behind this pseudo-site was because <a href="blog1.html"> don't like LinkedIn </a> I also realise it’s very important, so check out my professional portfolio below.
+    <p>Welcome to my personal website. I’m a third-year economics undergraduate studying at Ashoka University. My main motivation behind this pseudo-site was because <a href="blog_subpages/blog1.html"> don't like LinkedIn </a> I also realise it’s very important, so check out my professional portfolio below.
     
     
     </p>
