--- a/projectspage.html
+++ b/projectspage.html
@@ -166,7 +166,7 @@
         <iframe src="pdfs/Evaluating_and_Improving_Proxy_Selection_Frameworks_for_Welfare_Schemes.pdf"></iframe>
         <p>A condensed version covering the broad topics in this PPT:</p>
         <iframe src="pdfs/Evaluating and Improving Proxy Selection Frameworks for Social Welfar Programs- PPT.pdf"></iframe>
-        <p>Econometric analysis done via Python and Stata.</p>
+        <p>Econometric analysis done via Python and Stata. Find all the code below</p>
 
         <!-- GitHub Card -->
         <div class="github-card">
@@ -177,6 +177,18 @@
             </div>
             <a href="https://github.com/shrimalcodes/Evaluating-and-Improving-Proxy-Selection-Frameworks-for-Welfare-Schemes" 
                target="_blank" class="github-button">View on GitHub</a>
+        </div>
+    </div>
+
+    <!-- Project 2 -->
+    <div class="project">
+        <h2>Evolution of India’s Credit Post IBC: Consumerization and why we should bring securitised loans to India</h2>
+        <p>The paper talks about a fundamental shift in India’s credit landscape- credit flows moving away from industries and towards consumers. It also highlights the risk such a change poses, and suggests some policies that could reverse the trend. </p>
+       <p>Following this, we tried to model the said risk-aversion amongst banks using private bank level data, and analysed the impact on productivity. </p> 
+        <iframe src="pdfs/Evolution of India's Credit Post IBC.pdf"></iframe>
+        <div class="toolbar">
+            <a href="index.html">&larr; Back to Home</a>
+            <a href="pdfs/Evolution of India's Credit Post IBC.pdff" target="_blank">Download PDF</a>
         </div>
     </div>
 
