--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name</title>
+    <title>Siddharth Shrimal</title>
     <style>
         body {
             font-family: "Georgia", serif;
@@ -64,6 +64,7 @@
     <div class="nav">
         <a href="projectspage.html">Projects</a>
         <a href="blogs.html">Blog</a>
+        <a href="cv.html">CV</a>
     </div>
 
     <h2 id="contact">Contact</h2>
