--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <h2 id="contact">Contact</h2>
     <p>
         You can reach me at <a href="mailto:siddharth.shrimal_ug25@ashoka.edu.in">siddharth.shrimal_ug25@ashoka.edu.in</a> 
-        or connect with me on <a href="https://www.linkedin.com/in/your-profile" target="_blank">LinkedIn</a>.
+        or connect with me on <a href="https://www.linkedin.com/in/shrimal/" target="_blank">LinkedIn</a>.
     </p>
     
     <footer>
