--- a/projectspage.html
+++ b/projectspage.html
@@ -184,8 +184,7 @@
     <div class="project">
         <h2>Evolution of India’s Credit Post IBC: Consumerization and why we should bring securitised loans to India</h2>
         <p>The paper talks about a fundamental shift in India’s credit landscape- credit flows moving away from industries and towards consumers. It also highlights the risk such a change poses, and suggests some policies that could reverse the trend. </p>
-        <p>It's also been published <a> href="here" target="https://icpp.ashoka.edu.in/navigating-indias-credit-evolution-addressing-post-ibc-challenges-and-opportunities/" </a></p>
-        <p>Following this, we tried to model the said risk-aversion amongst banks using private bank level data, and analysed the impact on productivity. </p> 
+         <p>It's also been published <a href="https://icpp.ashoka.edu.in/navigating-indias-credit-evolution-addressing-post-ibc-challenges-and-opportunities/" target="_blank">here</a></p>        <p>Following this, we tried to model the said risk-aversion amongst banks using private bank level data, and analysed the impact on productivity. </p> 
         <iframe src="pdfs/Evolution of India's Credit Post IBC.pdf"></iframe>
         <div class="toolbar">
             <a href="index.html">&larr; Back to Home</a>
