--- a/projectspage.html
+++ b/projectspage.html
@@ -184,7 +184,7 @@
     <div class="project">
         <h2>Evolution of India’s Credit Post IBC: Consumerization and why we should bring securitised loans to India</h2>
         <p>The paper talks about a fundamental shift in India’s credit landscape- credit flows moving away from industries and towards consumers. It also highlights the risk such a change poses, and suggests some policies that could reverse the trend. </p>
-         <p>It's also been published <a href="https://icpp.ashoka.edu.in/navigating-indias-credit-evolution-addressing-post-ibc-challenges-and-opportunities/" target="_blank">here</a></p>        <p>Following this, we tried to model the said risk-aversion amongst banks using private bank level data, and analysed the impact on productivity. </p> 
+       <p>Following this, we tried to model the said risk-aversion amongst banks using private bank level data, and analysed the impact on productivity. </p> 
         <iframe src="pdfs/Evolution of India's Credit Post IBC.pdf"></iframe>
         <div class="toolbar">
             <a href="index.html">&larr; Back to Home</a>
@@ -201,6 +201,17 @@
             <a href="index.html">&larr; Back to Home</a>
             <a href="pdfs/Bridging the Credit Gap- Examining Banking Behavior, Credit Access and Economic Growth in India.pdf" target="_blank">Download PDF</a>
         </div>
+    </div>
+
+    <footer>
+        &copy; 2025 Your Name. All rights reserved.
+    </footer>
+
+    <!-- Non-Research Projects Section -->
+    <h2>Non-Research Projects</h2>
+    <p>For a look at my non-research projects, click below:</p>
+    <div class="toolbar">
+        <a href="nonresearchprojpage.html">View Non-Research Projects</a>
     </div>
 
     <footer>
