--- a/cv.html
+++ b/cv.html
@@ -75,7 +75,7 @@
     <p><a href="index.html">&larr; Back to Home</a></p>
 
     <!-- PDF Viewer -->
-    <iframe src="pdfs/CV_Jan25.pdf"></iframe>
+    <iframe src="pdfs/CV_Feb25.pdf"></iframe>
 
     <!-- Toolbar -->
     <div class="toolbar">
