--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <!-- Ensures the site scales properly on mobile devices -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Siddharth Shrimal</title>
     <style>
@@ -70,6 +71,25 @@
             font-size: 0.9em;
             color: #555;
             text-align: center;
+        }
+
+        /* Responsive styling for narrower screens */
+        @media (max-width: 600px) {
+            .container {
+                flex-direction: column;
+                align-items: center;
+                margin-right: 0;
+            }
+            
+            .content {
+                margin-right: 0;
+            }
+
+            /* Bring the image closer and center on mobile */
+            .image-container {
+                margin-top: 20px;
+                justify-content: center;
+            }
         }
     </style>
 </head>
