--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             .container {
                 flex-direction: column;
                 align-items: center;
-                margin-right: 0;
+                text-align: center;
             }
             
             .content {
@@ -87,8 +87,13 @@
 
             /* Bring the image closer and center on mobile */
             .image-container {
-                margin-top: 20px;
-                justify-content: center;
+                margin-top: 10px;
+                width: 50%;
+            }
+
+            .image-container img{
+                width: 100%;
+                height: auto;
             }
         }
     </style>
