--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
 
             /* Bring the image closer and center on mobile */
             .image-container {
+                order: -1;
                 margin-top: 10px;
                 width: 50%;
             }
