--- a/projectspage.html
+++ b/projectspage.html
@@ -1,221 +1,292 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects</title>
-    <style>
-        body {
-            font-family: "Georgia", serif;
-            margin: 20px;
-            line-height: 1.6;
-            max-width: 1000px;
-            margin-left: auto;
-            margin-right: auto;
-            background-color: #f8f9fa;
-            color: #333;
-        }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Projects</title>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Your custom stylesheet (if any) -->
+  <link rel="stylesheet" href="style.css">
+  <style>
+    html {
+      scroll-behavior: smooth;
+    }
+    body {
+      font-family: "Georgia", serif;
+      margin: 20px;
+      line-height: 1.6;
+      max-width: 1000px;
+      margin-left: auto;
+      margin-right: auto;
+      background-color: #f8f9fa;
+      color: #333;
+      padding-top: 80px; /* Added padding to push content below the fixed navbar */
+    }
 
-        h1, h2 {
-            color: #333;
-            text-align: center;
-        }
+    h1, h2 {
+      color: #333;
+      text-align: center;
+    }
 
-        a {
-            color: blue;
-            text-decoration: none;
-        }
+    a {
+      color: blue;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
 
-        a:hover {
-            text-decoration: underline;
-        }
+    .project {
+      margin-bottom: 40px;
+      padding: 15px;
+      border-radius: 8px;
+      background-color: white;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    }
 
-        .project {
-            margin-bottom: 40px;
-            padding: 15px;
-            border-radius: 8px;
-            background-color: white;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        }
+    iframe {
+      display: block;
+      width: 100%;
+      height: 600px;
+      border: 1px solid #ccc;
+      margin-top: 10px;
+      border-radius: 5px;
+    }
 
-        iframe {
-            display: block;
-            width: 100%;
-            height: 600px;
-            border: 1px solid #ccc;
-            margin-top: 10px;
-            border-radius: 5px;
-        }
+    .toolbar {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      align-items: center;
+      background-color: #d3d3d3;
+      padding: 10px 15px;
+      border-radius: 8px;
+      margin-top: 10px;
+    }
 
-        .toolbar {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-between;
-            align-items: center;
-            background-color: #d3d3d3;
-            padding: 10px 15px;
-            border-radius: 8px;
-            margin-top: 10px;
-        }
+    .toolbar a {
+      color: black;
+      text-decoration: none;
+      font-size: 14px;
+      padding: 5px 10px;
+      background-color: #e9ecef;
+      border-radius: 5px;
+      transition: background-color 0.2s ease;
+    }
 
-        .toolbar a {
-            color: black;
-            text-decoration: none;
-            font-size: 14px;
-            padding: 5px 10px;
-            background-color: #e9ecef;
-            border-radius: 5px;
-            transition: background-color 0.2s ease;
-        }
+    .toolbar a:hover {
+      background-color: #ced4da;
+    }
 
-        .toolbar a:hover {
-            background-color: #ced4da;
-        }
+    .index {
+      background-color: #ffffff;
+      padding: 15px;
+      border-radius: 8px;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+      margin-bottom: 30px;
+    }
 
-        .github-card {
-            display: flex;
-            align-items: center;
-            background-color: #dbd6d6;
-            color: white;
-            padding: 15px;
-            border-radius: 10px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            transition: transform 0.2s ease, box-shadow 0.2s ease;
-            margin-top: 10px;
-        }
+    .index ul {
+      list-style-type: none;
+      padding: 0;
+      text-align: left;
+    }
 
-        .github-card:hover {
-            transform: scale(1.02);
-            box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2);
-        }
+    .index ul li {
+      margin: 10px 0;
+    }
 
-        .github-icon {
-            flex-shrink: 0;
-            width: 50px;
-            height: 50px;
-            margin-right: 15px;
-        }
+    .index ul li a {
+      font-weight: bold;
+    }
 
-        .github-info {
-            flex-grow: 1;
-        }
+    footer {
+      margin-top: 50px;
+      font-size: 0.9em;
+      color: #555;
+      text-align: center;
+    }
 
-        .github-info h2 {
-            font-size: 18px;
-            margin: 0 0 5px;
-            color: #000000;
-        }
+    /* GitHub Card styles */
+    .github-card {
+      display: flex;
+      align-items: center;
+      background-color: #dbd6d6;
+      color: white;
+      padding: 15px;
+      border-radius: 10px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
+      margin-top: 10px;
+    }
 
-        .github-info p {
-            margin: 0;
-            font-size: 14px;
-            color: #000000;
-        }
+    .github-card:hover {
+      transform: scale(1.02);
+      box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2);
+    }
 
-        .github-button {
-            text-decoration: none;
-            font-size: 14px;
-            color: white;
-            background-color: #21262d;
-            padding: 8px 12px;
-            border-radius: 6px;
-            font-weight: bold;
-            transition: background-color 0.2s ease;
-        }
+    .github-icon {
+      flex-shrink: 0;
+      width: 50px;
+      height: 50px;
+      margin-right: 15px;
+    }
 
-        .github-button:hover {
-            background-color: #161b22;
-        }
+    .github-info {
+      flex-grow: 1;
+    }
 
-        @media (max-width: 480px) {
-            .github-card {
-                flex-direction: column;
-                align-items: flex-start;
-                text-align: left;
-            }
+    .github-info h2 {
+      font-size: 18px;
+      margin: 0 0 5px;
+      color: #000;
+    }
 
-            .github-icon {
-                margin-bottom: 10px;
-            }
+    .github-info p {
+      margin: 0;
+      font-size: 14px;
+      color: #000;
+    }
 
-            .github-info h2 {
-                font-size: 16px;
-            }
+    .github-button {
+      text-decoration: none;
+      font-size: 14px;
+      color: white;
+      background-color: #21262d;
+      padding: 8px 12px;
+      border-radius: 6px;
+      font-weight: bold;
+      transition: background-color 0.2s ease;
+    }
 
-            .github-button {
-                margin-top: 10px;
-            }
-        }
+    .github-button:hover {
+      background-color: #161b22;
+    }
 
-        footer {
-            margin-top: 50px;
-            font-size: 0.9em;
-            color: #555;
-            text-align: center;
-        }
-    </style>
+    @media (max-width: 480px) {
+      .github-card {
+        flex-direction: column;
+        align-items: flex-start;
+        text-align: left;
+      }
+
+      .github-icon {
+        margin-bottom: 10px;
+      }
+
+      .github-info h2 {
+        font-size: 16px;
+      }
+
+      .github-button {
+        margin-top: 10px;
+      }
+    }
+  </style>
 </head>
 <body>
-    <h1>Projects</h1>
-    <p><a href="index.html">&larr; Back to Home</a></p>
+    <!-- Centered Fixed-Top Navbar -->
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
+        <div class="container-fluid">
+          <!-- Use mx-auto on the UL to center items horizontally -->
+          <ul class="navbar-nav mx-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Home</a>
+            </li>
 
-    <!-- Project 1 -->
-    <div class="project">
-        <h2>Evaluating and Improving Proxy Selection Frameworks</h2>
-        <p>The assignment was for a development economics course, and I thoroughly enjoyed the process. It covers social program targeting and how we can make that more accurate.</p>
-        <iframe src="pdfs/Evaluating_and_Improving_Proxy_Selection_Frameworks_for_Welfare_Schemes.pdf"></iframe>
-        <p>A condensed version covering the broad topics in this PPT:</p>
-        <iframe src="pdfs/Evaluating and Improving Proxy Selection Frameworks for Social Welfar Programs- PPT.pdf"></iframe>
-        <p>Econometric analysis done via Python and Stata. Find all the code below</p>
-
-        <!-- GitHub Card -->
-        <div class="github-card">
-            <img class="github-icon" src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="GitHub Icon">
-            <div class="github-info">
-                <h2>Evaluating-and-Improving-Proxy-Selection-Frameworks</h2>
-                <p>Repository by <strong>shrimalcodes</strong></p>
-            </div>
-            <a href="https://github.com/shrimalcodes/Evaluating-and-Improving-Proxy-Selection-Frameworks-for-Welfare-Schemes" 
-               target="_blank" class="github-button">View on GitHub</a>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Projects
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#project1">Proxy Selection Frameworks (Dev Econ)</a></li>
+                <li><a class="dropdown-item" href="#project2">India's Credit Post IBC</a></li>
+                <li><a class="dropdown-item" href="#project3">Risk Aversion of Banks</a></li>
+                <li><a class="dropdown-item" href="#project4">Taiwan's Energy Crisis</a></li>
+              </ul>
+            </li>
+          </ul>
         </div>
+      </nav>
+  
+  <!-- Project 1 -->
+  <div class="project" id="project1">
+    <h2>Evaluating and Improving Proxy Selection Frameworks</h2>
+    <p>The assignment was for a development economics course, and I thoroughly enjoyed the process. It covers social program targeting and how we can make that more accurate.</p>
+    <iframe src="pdfs/Evaluating_and_Improving_Proxy_Selection_Frameworks_for_Welfare_Schemes.pdf"></iframe>
+    <p>A condensed version covering the broad topics in this PPT:</p>
+    <iframe src="pdfs/Evaluating and Improving Proxy Selection Frameworks for Social Welfar Programs- PPT.pdf"></iframe>
+    <p>Econometric analysis done via Python and Stata. Find all the code below</p>
+    
+    <!-- GitHub Card -->
+    <div class="github-card">
+      <img class="github-icon" src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="GitHub Icon">
+      <div class="github-info">
+        <h2>Evaluating-and-Improving-Proxy-Selection-Frameworks</h2>
+        <p>Repository by <strong>shrimalcodes</strong></p>
+      </div>
+      <a href="https://github.com/shrimalcodes/Evaluating-and-Improving-Proxy-Selection-Frameworks-for-Welfare-Schemes" target="_blank" class="github-button">View on GitHub</a>
     </div>
+  </div>
 
-    <!-- Project 2 -->
-    <div class="project">
-        <h2>Evolution of India’s Credit Post IBC: Consumerization and why we should bring securitised loans to India</h2>
-        <p>The paper talks about a fundamental shift in India’s credit landscape- credit flows moving away from industries and towards consumers. It also highlights the risk such a change poses, and suggests some policies that could reverse the trend. </p>
-       <p>Following this, we tried to model the said risk-aversion amongst banks using private bank level data, and analysed the impact on productivity. </p> 
-        <iframe src="pdfs/Evolution of India's Credit Post IBC.pdf"></iframe>
-        <div class="toolbar">
-            <a href="index.html">&larr; Back to Home</a>
-            <a href="pdfs/Evolution of India's Credit Post IBC.pdff" target="_blank">Download PDF</a>
-        </div>
-    </div>
-
-    <!-- Project 3 -->
-    <div class="project">
-        <h2>Have banks turned their backs towards industry lending? Risk Aversion and its impact on economic productivity</h2>
-        <p>Apart from the bank lending industry, the paper also covers the insufficiencies in other forms of credit.</p>
-        <iframe src="pdfs/Bridging the Credit Gap- Examining Banking Behavior, Credit Access and Economic Growth in India.pdf"></iframe>
-        <div class="toolbar">
-            <a href="index.html">&larr; Back to Home</a>
-            <a href="pdfs/Bridging the Credit Gap- Examining Banking Behavior, Credit Access and Economic Growth in India.pdf" target="_blank">Download PDF</a>
-        </div>
-    </div>
-
-    <footer>
-        &copy; 2025 Your Name. All rights reserved.
-    </footer>
-
-    <!-- Non-Research Projects Section -->
-    <h2>Non-Research Projects</h2>
-    <p>For a look at my non-research projects, click below:</p>
+  <!-- Project 2 -->
+  <div class="project" id="project2">
+    <h2>Evolution of India’s Credit Post IBC: Consumerization and why we should bring securitised loans to India</h2>
+    <p>The paper talks about a fundamental shift in India’s credit landscape—credit flows moving away from industries and towards consumers. It also highlights the risk such a change poses, and suggests some policies that could reverse the trend.</p>
+    <p>Following this, we tried to model the said risk-aversion amongst banks using private bank level data, and analysed the impact on productivity.</p>
+    <p>We also had this work published at <a href="https://icpp.ashoka.edu.in/navigating-indias-credit-evolution-addressing-post-ibc-challenges-and-opportunities/" target="_blank">ICPP</a>. Check it out!</p>
+    <iframe src="pdfs/Evolution of India's Credit Post IBC.pdf"></iframe>
     <div class="toolbar">
-        <a href="nonresearchprojpage.html">View Non-Research Projects</a>
+      <a href="index.html">&larr; Back to Home</a>
+      <a href="pdfs/Evolution of India's Credit Post IBC.pdf" target="_blank">Download PDF</a>
     </div>
+  </div>
 
-    <footer>
-        &copy; 2025 Your Name. All rights reserved.
-    </footer>
+  <!-- Project 3 -->
+  <div class="project" id="project3">
+    <h2>Have banks turned their backs towards industry lending? Risk Aversion and its impact on economic productivity</h2>
+    <p>Apart from the bank lending industry, the paper also covers the insufficiencies in other forms of credit.</p>
+    <iframe src="pdfs/Bridging the Credit Gap- Examining Banking Behavior, Credit Access and Economic Growth in India.pdf"></iframe>
+    <div class="toolbar">
+      <a href="index.html">&larr; Back to Home</a>
+      <a href="pdfs/Bridging the Credit Gap- Examining Banking Behavior, Credit Access and Economic Growth in India.pdf" target="_blank">Download PDF</a>
+    </div>
+  </div>
+
+  <!-- Project 4 -->
+  <div class="project" id="project4">
+    <h2>Taiwan's Energy Crisis</h2>
+    <p>We look at Taiwan's energy crisis and it's impact on the semiconductor value chain. It presents a good opportunity for them to rethink Taiwanese energy demand- and how they can do so.</p>
+    <iframe src="pdfs/Taiwan_Energy_Crisis.pdf"></iframe>
+    <div class="toolbar">
+        <a href="index.html">&larr; Back to Home</a>
+        <a href="pdfs/Taiwan_Energy_Crisis.pdf" target="_blank">Download PDF</a>
+      </div>
+    </div>
+  
+  <footer>
+    &copy; 2025 Your Name. All rights reserved.
+  </footer>
+
+  <!-- Non-Research Projects Section -->
+  <h2>Non-Research Projects</h2>
+  <p>For a look at my non-research projects, click below:</p>
+  <div class="toolbar">
+    <a href="nonresearchprojpage.html">View Non-Research Projects</a>
+  </div>
+
+  <footer>
+    &copy; 2025 Your Name. All rights reserved.
+  </footer>
+
+  <!-- Bootstrap JS (includes Popper) -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
