--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             </a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="projectspage.html">Research Projects</a></li>
-              <li><a class="dropdown-item" href="nonresearchprojectspage.html">Non-Research Projects</a></li>
+              <li><a class="dropdown-item" href="nonresearchprojpage.html">Non-Research Projects</a></li>
             </ul>
           </li>
         </ul>
