--- a/projectspage.html
+++ b/projectspage.html
@@ -210,6 +210,7 @@
                 <li><a class="dropdown-item" href="#project2">India's Credit Post IBC</a></li>
                 <li><a class="dropdown-item" href="#project3">Risk Aversion of Banks</a></li>
                 <li><a class="dropdown-item" href="#project4">Taiwan's Energy Crisis</a></li>
+                <li><a class="dropdown-item" href="#project5">Nudge Model for System 1 and 2 thinking</a></li>
               </ul>
             </li>
           </ul>
@@ -270,7 +271,17 @@
         <a href="pdfs/Taiwan_Energy_Crisis.pdf" target="_blank">Download PDF</a>
       </div>
     </div>
-  
+
+  <div class="project" id="project5">
+    <h2>A Nudge Driven Model for Decision Effort and System Choice</h2>
+    <p>Although, I do not frequently study or interact with microeconomics, we developed this model to show how effort plays a role in our choice between System 1 and 2 thinking. It's useful because we can optimally use nudges. </p>
+    <iframe src="pdfs/System1and2_Behav.pdf"></iframe>
+    <div class="toolbar">
+      <a href="index.html">&larr; Back to Home</a>
+      <a href="pdfs/System1and2_Behav.pdf" target="_blank">Download PDF</a>
+    </div>
+  </div>
+
   <footer>
     &copy; 2025 Your Name. All rights reserved.
   </footer>
