--- a/cv.html
+++ b/cv.html
@@ -80,7 +80,7 @@
     <!-- Toolbar -->
     <div class="toolbar">
         <a href="index.html">&larr; Back to Home</a>
-        <a href="pdfs/CV_Feb25.pdf" target="_blank">Download CV</a>
+        <a href="pdfs/CV_Sep25.pdf" target="_blank">Download CV</a>
     </div>
 
     <footer>
