--- a/cv.html
+++ b/cv.html
@@ -75,12 +75,12 @@
     <p><a href="index.html">&larr; Back to Home</a></p>
 
     <!-- PDF Viewer -->
-    <iframe src="pdfs/CV_Feb25.pdf"></iframe>
+    <iframe src="pdfs/CV_Sep25.pdf"></iframe>
 
     <!-- Toolbar -->
     <div class="toolbar">
         <a href="index.html">&larr; Back to Home</a>
-        <a href="pdfs/CV_Feb25.pdf" target="_blank">Download CV</a>
+        <a href="pdfs/CV_Sep25.pdf" target="_blank">Download CV</a>
     </div>
 
     <footer>
